--- a/AppBanQuanAo/app/src/main/AndroidManifest.xml
+++ b/AppBanQuanAo/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.SanPhamActivity"></activity>
+        <activity android:name=".Activity.ViewAllActivity"></activity>
+        <activity android:name=".Activity.AddressActivity" />
+        <activity android:name=".Activity.DelivertyActivity" />
+        <activity android:name=".Activity.SanPhamActivity" />
         <activity android:name=".Activity.LoaiSanPhamActivity" />
         <activity
             android:name=".Activity.TrangChuActivity"
